@@ -66,7 +66,9 @@ class wxbUtils
       
       /* Sleeps during milliseconds (wrapper for wxUsleep (2.4) or wxMilliSleep (2.6)) */
       static void MilliSleep(unsigned long milliseconds);
-
+      
+      static wxString ConvertToPrintable(wxString& str);
+      
    private:
       static bool inited;
 };
