@@ -1,3 +1,7 @@
+05-05-2005 :
+ - Add a workaround for a problem when displaying Unicode filenames with
+   non-Unicode wxWidgets.
+
 04-05-2005 :
  - Remember the last window position and size.
 
